fixed overflow

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -13,7 +13,11 @@
 	background: #9AE4E8;
 }
 #filter, #twitter {
+	overflow: auto;
 	opacity: 0;
+	-webkit-box-shadow: 7px 0px 20px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    7px 0px 20px rgba(50, 50, 50, 0.75);
+	box-shadow:         7px 0px 20px rgba(50, 50, 50, 0.75)
 }
 #search {
     border-radius: 0.5em;
@@ -32,9 +36,6 @@
 			width: 85%;
 		}
 	}
-}
-#twitter {
-	overflow: auto;
 }
 .tweetCloud {
 	display:block;
